name:                migratory
version:             0.1.0.0
synopsis:            Dependently-Typed Database Migrations in Haskell
description:         Please see README.md
homepage:            https://github.com/sasinestro/migratory#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Alexis Williams
maintainer:          sasinestro@gmail.com
copyright:           Copyright: (c) 2016 Alexis Williams
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall -Wno-redundant-constraints -Wno-unticked-promoted-constructors
    default-extensions:  ConstraintKinds
                       , DataKinds
                       , FlexibleContexts
                       , FlexibleInstances
                       , GADTs
                       , PolyKinds
                       , RankNTypes
                       , RecordWildCards
                       , ScopedTypeVariables
                       , TemplateHaskell
                       , TypeOperators
                       , TypeFamilies
                       , UndecidableInstances

    exposed-modules:     Database.Migratory.TableSchema
--                       , Database.Migratory.Migrate

    build-depends:       base >= 4.9 && < 5
                       , template-haskell
                       , text
                       , bytestring
                       , aeson
                       , postgresql-simple
                       , indexed
                       , indexed-extras
                       , data-default
                       , rebindable
                       , cryptonite


source-repository head
  type:     git
  location: https://github.com/sasinestro/migratory
