name:                migratory
version:             0.1.0.0
synopsis:            Dependently-Typed Database Migrations in Haskell
description:         Please see README.md
homepage:            https://github.com/sasinestro/migratory#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Alexis Williams
maintainer:          sasinestro@gmail.com
copyright:           Copyright: (c) 2016 Alexis Williams
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall -Wno-redundant-constraints -Wno-unticked-promoted-constructors -fplugin GHC.TypeLits.Symbols.Solver -fconstraint-solver-iterations=0
    default-extensions:  ConstraintKinds
                       , DataKinds
                       , DeriveDataTypeable
                       , FlexibleContexts
                       , FlexibleInstances
                       , GADTs
                       , PolyKinds
                       , RankNTypes
                       , RecordWildCards
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TypeOperators
                       , TypeFamilies
                       , UndecidableInstances

    exposed-modules:     Database.Migratory.Schema
                       , Database.Migratory.MigrationPrelude
                       , Database.Migratory.Migrate

    other-modules:       Database.Migratory.Schema.ToValue
                       , Database.Migratory.Schema.Types
                       , Database.Migratory.Schema.TypeFunctions

    build-depends:       base >= 4.9 && < 5
                       , text
                       , bytestring
                       , aeson
                       , postgresql-simple
                       , indexed
                       , indexed-extras
                       , data-default
                       , ghc-typelits-symbols
                       , cryptonite


source-repository head
  type:     git
  location: https://github.com/sasinestro/migratory
